--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
-        /*buildTypes.each {
+        buildTypes.each {
             it.buildConfigField 'String', 'TheMovieDBAPIKEY', TheMovieDBAPIKEY
-        }*/
+        }
     }
 }
 
